<resources>
    <string name="app_name">Database</string>

    <string name="title_sqlite">SQLite</string>
    <string name="title_dbflow">DBFlow</string>
    <string name="title_form_dialog">Edit</string>

    <string name="label_name">Name: </string>
    <string name="label_gender">Gender: </string>
    <string name="label_birthday">Birthday: </string>
    <string name="label_gender_all">All</string>
    <string name="label_gender_male">Male</string>
    <string name="label_gender_female">Female</string>

    <string name="btn_sqlite">SQLite</string>
    <string name="btn_dbflow">DBFlow</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="hint_name">Please input your name</string>
    <string name="hint_birthday">Please select your birthday</string>
</resources>
