<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:paddingEnd="20sp"
    android:paddingStart="20sp"
    android:paddingTop="20sp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80sp"
            android:paddingEnd="10sp"
            android:paddingStart="0sp"
            android:text="@string/label_name"
            android:textAlignment="textEnd"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="@dimen/edit_font_size"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20sp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80sp"
            android:paddingEnd="10sp"
            android:paddingStart="0sp"
            android:text="@string/label_gender"
            android:textAlignment="textEnd"/>

        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/gender_female"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20sp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80sp"
            android:paddingEnd="10sp"
            android:paddingStart="0sp"
            android:text="@string/label_birthday"
            android:textAlignment="textEnd"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthday"
                android:inputType="none"
                android:textSize="@dimen/edit_font_size"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:tint="@color/colorPrimary"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/btn_cancel"
            android:textColor="@color/color_dialog_button_default"
            android:textSize="@dimen/button_font_size"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:lines="1"
            android:text="@string/btn_confirm"
            android:textColor="@color/color_dialog_button_primary"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>

</LinearLayout>
