<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:paddingBottom="5sp"
    android:paddingEnd="10sp"
    android:paddingStart="10sp"
    android:paddingTop="5sp">

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingEnd="12sp"
        android:paddingStart="12sp"
        android:textAlignment="center"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_name"/>

            <TextView android:id="@+id/name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:background="@color/color_split_line"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_gender"/>

            <TextView android:id="@+id/gender"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_birthday"/>

            <TextView android:id="@+id/birthday"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
