<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:theme="@style/AppTheme.ListViewItem"
    tools:context=".common.views.BaseActivity">

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:textAlignment="center"
        tools:text="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                tools:text="Alvin" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/color_split_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                tools:text="Male" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_birthday"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                tools:text="1981-03-17" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_manage"
        android:textAllCaps="false" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_delete"
        android:textAllCaps="false"
        android:tint="@color/colorPrimary" />
</LinearLayout>
